# font-factory

./: .gitignore  Makefile  README.md  fontfactory.py  pyproject.toml  requirements.txt
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/electron/: backend.js  main.js  preload.js
app/scripts/: backend.py
app/src/: App.tsx  index.css
app/src/components/: GlyphGrid.tsx  LayoutEditor.tsx  SheetView.tsx
app/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx
app/src/lib/: api.ts  sheet.ts
fontfactory/: __init__.py  cli.py  config.py  preview.py
fontfactory/stages/: __init__.py  assemble.py  slice.py  vectorize.py
sheets/: magazine.toml  serif.toml
