[project]
name = "fontfactory"
version = "1.0.0"
description = "Build fonts from glyph sheets."
requires-python = ">=3.11"          # tomllib
dependencies = ["opencv-python", "numpy", "Pillow", "fonttools"]

[project.scripts]
fontfactory = "fontfactory.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fontfactory", "fontfactory.stages"]
